--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,10 +90,10 @@ jobs:
           argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
           if [ "${{ matrix.service }}" = "api" ]; then
             echo "Setting pixels image override..."
-            argocd app set pixels-staging --kustomize-image pixels=ghcr.io/pokemonpower92/pixels/api:${{ needs.detect-changes.outputs.short_sha }}
+            argocd app set pixels-staging --kustomize-image pixels=ghcr.io/pokemonpower92/homelab/api:${{ needs.detect-changes.outputs.short_sha }}
           elif [ "${{ matrix.service }}" = "migrate" ]; then
             echo "Setting migrate image override..."
-            argocd app set pixels-staging --kustomize-image migrate=ghcr.io/pokemonpower92/pixels/migrate:${{ needs.detect-changes.outputs.short_sha }}
+            argocd app set pixels-staging --kustomize-image migrate=ghcr.io/pokemonpower92/homelab/migrate:${{ needs.detect-changes.outputs.short_sha }}
           fi
           echo "✅ Updated ${{ matrix.service }} to ${{ needs.detect-changes.outputs.short_sha }}"
 
@@ -157,13 +157,16 @@ jobs:
                 - name: e2e-tests
                   image: ghcr.io/pokemonpower92/homelab/runner-go:latest
                   workingDir: /workspace
+                  securityContext:
+                    runAsUser: 0
+                    runAsGroup: 0
                   env:
                   - name: TARGET_ENV
                     value: "staging"
                   - name: REPO_URL
                     value: "https://github.com/${{ github.repository }}.git"
                   - name: API_URL
-                    value: "http://pixels-api.pixels-staging.svc.cluster.local:8080"
+                    value: "http://pixels.pixels-staging.svc.cluster.local:8080"
                   - name: COMMIT_SHA
                     value: "${{ needs.detect-changes.outputs.short_sha }}"
                   - name: DEPLOYED_SERVICES
@@ -176,16 +179,23 @@ jobs:
                     echo "🔗 Target API: \$API_URL"
                     echo "📦 Services deployed: \$DEPLOYED_SERVICES"
                     
+                    # Debug: Check if we can resolve the service
+                    echo "🔍 Debugging API connectivity..."
+                    nslookup pixels-api.pixels-staging.svc.cluster.local || echo "⚠️ DNS lookup failed"
+                    
                     # Clone the repo to get the test files and Makefile
+                    echo "📥 Cloning repository..."
                     git clone \$REPO_URL .
                     git checkout \$COMMIT_SHA
                     
                     # Wait for the API to be ready before running tests
                     echo "⏳ Waiting for API to be ready..."
-                    timeout 120 bash -c 'until curl -f \$API_URL/health > /dev/null 2>&1; do 
+                    timeout 120 bash -c 'until curl -f \$API_URL/healthcheck > /dev/null 2>&1; do 
                       echo "Waiting for API at \$API_URL..."; sleep 5; 
                     done' || {
                       echo "❌ API at \$API_URL failed to become ready within timeout"
+                      echo "🔍 Debug info:"
+                      curl -v \$API_URL/healthcheck || true
                       exit 1
                     }
                     
