--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,7 +119,7 @@ jobs:
           argocd app get pixels-staging --output json | jq -r '.status.health.status' | grep -q "Healthy"
           echo "✅ Deployment successful: ${{ needs.detect-changes.outputs.short_sha }}"
 
-  run-e2e-tests:
+  run-integration-tests:
     needs: [detect-changes, sync-deployment]
     runs-on: [self-hosted, k3s, pixels]
     if: github.ref == 'refs/heads/main' && always() && !cancelled()
@@ -128,21 +128,21 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Run e2e tests
+      - name: Run integration tests
         id: test
         run: |
-          echo "🧪 Running e2e tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
+          echo "🔧 Running integration tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
           echo "📦 Services deployed: ${{ join(fromJson(needs.detect-changes.outputs.matrix).service, ', ') }}"
           
           # Clean up any existing test jobs
-          kubectl delete job pixels-e2e-test -n pixels-staging --ignore-not-found=true
+          kubectl delete job pixels-integration-test -n pixels-staging --ignore-not-found=true
           
-          # Create and run the test job (using your focused test-runner image)
+          # Create and run the integration test job
           cat <<EOF | kubectl apply -f -
           apiVersion: batch/v1
           kind: Job
           metadata:
-            name: pixels-e2e-test
+            name: pixels-integration-test
             namespace: pixels-staging
             labels:
               test-run: "${{ github.run_id }}"
@@ -154,7 +154,7 @@ jobs:
               spec:
                 restartPolicy: Never
                 containers:
-                - name: e2e-tests
+                - name: integration-tests
                   image: ghcr.io/pokemonpower92/homelab/runner-go:latest
                   workingDir: /workspace
                   securityContext:
@@ -175,21 +175,18 @@ jobs:
                   args: 
                   - -c
                   - |
-                    echo "🧪 Running e2e tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
+                    echo "🔧 Running integration tests for deployment ${{ needs.detect-changes.outputs.short_sha }}"
                     echo "🔗 Target API: \$API_URL"
                     echo "📦 Services deployed: \$DEPLOYED_SERVICES"
                     
-                    # Debug: Check if we can resolve the service
-                    echo "🔍 Debugging API connectivity..."
+                    echo "🔍 Debugging service connectivity..."
                     nslookup pixels-api.pixels-staging.svc.cluster.local || echo "⚠️ DNS lookup failed"
                     
-                    # Clone the repo to get the test files and Makefile
                     echo "📥 Cloning repository..."
                     git clone \$REPO_URL .
                     git checkout \$COMMIT_SHA
                     
-                    # Run your e2e test suite
-                    run_test.sh
+                    run_test.sh test-integration
                   resources:
                     limits:
                       memory: "512Mi"
@@ -199,21 +196,21 @@ jobs:
                       cpu: "250m"
           EOF
           
-          echo "⏳ Waiting for e2e tests to complete..."
+          echo "⏳ Waiting for integration tests to complete..."
           
           # Wait for the job to complete (success or failure)
-          if kubectl wait --for=condition=complete job/pixels-e2e-test -n pixels-staging --timeout=600s; then
-            echo "✅ E2E tests PASSED!"
+          if kubectl wait --for=condition=complete job/pixels-integration-test -n pixels-staging --timeout=600s; then
+            echo "✅ Integration tests PASSED!"
           else
-            echo "❌ E2E tests FAILED!"
-            kubectl logs job/pixels-e2e-test -n pixels-staging || true
+            echo "❌ Integration tests FAILED!"
+            kubectl logs job/pixels-integration-test -n pixels-staging || true
             exit 1
           fi
 
       - name: Rollback and revert on test failure
         if: failure()
         run: |
-          echo "🚨 E2E tests failed - performing automatic rollback and revert"
+          echo "🚨 Integration tests failed - performing automatic rollback and revert"
           
           # Tools are pre-installed in the custom runner image! 🎉
           echo "⚡ Step 1: ArgoCD rollback (immediate)"
@@ -230,7 +227,7 @@ jobs:
           echo "🧹 Step 2: Git revert (cleanup)"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git revert ${{ github.sha }} --no-edit -m "Auto-revert: e2e tests failed for ${{ needs.detect-changes.outputs.short_sha }}"
+          git revert ${{ github.sha }} --no-edit -m "Auto-revert: integration tests failed for ${{ needs.detect-changes.outputs.short_sha }}"
           git push origin main
           echo "✅ Git revert complete"
           
@@ -243,7 +240,7 @@ jobs:
           echo "🔗 ArgoCD UI: kubectl port-forward svc/argocd-server -n argocd 8080:443"
 
   deployment-summary:
-    needs: [detect-changes, run-e2e-tests]
+    needs: [detect-changes, run-integration-tests]
     runs-on: [self-hosted, k3s, pixels]
     if: always()
     steps:
@@ -253,14 +250,14 @@ jobs:
           echo "📝 Commit: ${{ needs.detect-changes.outputs.short_sha }}"
           echo "🏷️  Services: ${{ join(fromJson(needs.detect-changes.outputs.matrix).service, ', ') }}"
           
-          if [[ "${{ needs.run-e2e-tests.result }}" == "success" ]]; then
+          if [[ "${{ needs.run-integration-tests.result }}" == "success" ]]; then
             echo "✅ DEPLOYMENT SUCCESSFUL!"
-            echo "🎉 All services deployed and e2e tests passed"
+            echo "🎉 All services deployed and integration tests passed"
             echo "🚀 Deployment ${{ needs.detect-changes.outputs.short_sha }} is live in staging"
           else
             echo "❌ DEPLOYMENT FAILED AND ROLLED BACK"
             echo "🔄 Application reverted to previous working version"
-            echo "💡 Check e2e test failure logs above"
+            echo "💡 Check integration test failure logs above"
           fi
           
           echo ""
