--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,9 +91,13 @@ jobs:
         run: |
           argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
           if [ "${{ matrix.service }}" = "api" ]; then
+            echo "Unsetting api image overide"
+            argocd app unset pixels-staging --kustomize-image pixels
             echo "Setting pixels image override..."
             argocd app set pixels-staging --kustomize-image pixels=ghcr.io/pokemonpower92/pixels/api:${{ needs.detect-changes.outputs.short_sha }}
           elif [ "${{ matrix.service }}" = "migrate" ]; then
+            echo "Unsetting migrate image overide"
+            argocd app unset pixels-staging --kustomize-image migrate
             echo "Setting migrate image override..."
             argocd app set pixels-staging --kustomize-image migrate=ghcr.io/pokemonpower92/pixels/migrate:${{ needs.detect-changes.outputs.short_sha }}
           fi
