--- a/.github/workflows/mergeRequest.yml
+++ b/.github/workflows/mergeRequest.yml
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   test-coverage:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, k3s, pixels]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
