--- a/.github/workflows/mergeRequest.yml
+++ b/.github/workflows/mergeRequest.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
     paths:
+      - ".github/workflows/**"
       - "cmd/**"
       - "internal/**"
       - "go.mod"
